	(dt_symbol_insert): Likewise.
	(dt_symtab_destroy): Likewise. Free the strtab; free the symbol
	name only if not packed.
	(dt_symbol_by_name): Look in the string table if packed.
	(dt_symbol_name): Likewise.
	(dt_symtab_pack): Do nothing if already packed.  Construct the
	string table.
	* libdtrace/dt_module.c (dtrace_update): Pack the symbol tables.

2012-10-30  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_symtab.h (dt_symbol, dt_symtab, DT_ST_*): Move to...
	* libdtrace/dt_symtab.c: ... here.

2012-11-02  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec (Requires): Unbump dtrace-kernel-interface.

2012-10-29  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dtrace_lookup_by_addr): sip and symp can
	both be NULL.
	* libdtrace/dt_symtab.c (dt_symbol_search_arg): Unused, remove.
	(dt_symbol_search_cmp): Consider addresses within the range
	symbol..symbol+size to match the symbol.
	(dt_symbol_by_addr): Likewise.  bsearch() returns a pointer to a
	pointer to the symbol.

	* test/unittest/grammar/tst.stmts.r: Regenerated.
	* test/unittest/printf/tst.basics.r: Likewise.
	* test/unittest/printf/tst.sym.d: No longer XFAIL.
	* test/unittest/stack/tst.default.r: New.
	* test/unittest/stack/tst.default.r.p: Filter out everything but
	unresolved addresses and dtrace_stacktrace().

2012-10-18  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dtrace_update): Shuffle dtrace to the
	front of the module list, not shared_ctf.
	* test/unittest/types/tst.notypeload.d: Both 2 and 3 are valid
	outputs. Emit a list of modules from which CTF was loaded on test
	failure.
	* test/unittest/types/tst.notypeload.d: Adjust.

2012-10-10  Nick Alcock  <nick.alcock@oracle.com>

	* .gitignore: Ignore build*, not build-*.

	Rename dtrace_ctf -> ctf / ctf_shared renaming.

	* libdtrace-ctf: Pull in .dtrace_ctf -> .ctf changes.
	* libdtrace/dt_impl.h (DT_DM_SHARED): New.
	(DT_DM_KERN_UNLOADED): Renumber.