@@ -14,6 +14,10 @@
 	string table.
 	* libdtrace/dt_module.c (dtrace_update): Pack the symbol tables.
 
+	* libdtrace/dt_module.c (dtrace_addr_range_merge): New function,
+	merges adjacent address range entries.
+	(dtrace_update): Use it after sorting the address ranges.
+
 2012-10-30  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_symtab.h (dt_symbol, dt_symtab, DT_ST_*): Move to...
